<resources>
  	<string name="ime_name">OpenWnn Korean</string>
    <string name="preference_ime_setting_app">Setting</string>
    <string name="preference_method_setting_menu">Input Method</string>
    <string name="preference_method_enabler_title">Enable / Disable Input Methods</string>
    <string name="preference_method_enabler_summary">Please enable \'OpenWnn Korean\'.</string>
    <string name="preference_method_picker_title">Show Input Method Picker</string>
    <string name="preference_key_setting_menu">Software Keyboard</string>
    <string name="preference_key_sound_title"> Sound on Key Press </string>
    <string name="preference_key_sound_summary"> Enable key click sound. </string>
    <string name="preference_key_vibration_title"> Vibrate on Key Press </string>
    <string name="preference_key_vibration_summary"> Enable key click vibration. </string>
    <string name="preference_key_vibration_duration_title">Key Vibration Duration</string>
    <string name="preference_key_vibration_duration_summary">Set key vibration duration. Default value is 30.</string>
    <string name="preference_preview_title"> Key Preview </string>
    <string name="preference_preview_summary"> Enable key preview. </string>
    <string name="preference_key_height_portrait_title">Key Height (Portrait)</string>
    <string name="preference_key_height_portrait_summary">Adjust key height in portrait mode. Default value is 50.</string>
    <string name="preference_key_height_landscape_title">Key Height (Landscape)</string>
    <string name="preference_key_height_landscape_summary">Adjust key height in landscape mode. Default value is 42.</string>
    <string name="preference_auto_caps_title"> Auto Capitalization </string>
    <string name="preference_auto_caps_summary"> Automatically capitalize the 1st char of a sentence in alphabet mode. </string>
    <string name="preference_keyboard_skin_title">Keyboard Image</string>
    <string name="preference_keyboard_skin_summary">Change keyboard image.</string>
    <string name="preference_keyboard_android_default">Standard</string>
    <string name="preference_keyboard_simple">Simple</string>
    <string name="preference_keyboard_metal">Metal</string>
    <string name="preference_keyboard_flat">Flat</string>
    <string name="preference_keyboard_white">White</string>
    <string name="preference_keyboard_dark">Dark</string>
    <string name="preference_conversion_menu">Conversion</string>
    <string name="preference_prediction_title">Word Prediction</string>
    <string name="preference_prediction_summary">Display predicted words as conversion candidates.</string>
    <string name="preference_correct_spell_title">Typing Error Correction</string>
    <string name="preference_correct_spell_summary">Display predicted words for correcting typing error.</string>
    <string name="preference_input_learning_title">Input Word Learning</string>
    <string name="preference_input_learning_summary">Learn input words.</string>
    <string name="preference_aboutime_menu"> About IME </string>
    <string name="preference_dictionary_menu"> Dictionary </string>
    <string name="preference_dictionary_menu_ja"> Japanese User Dictionary </string>
    <string name="preference_dictionary_menu_en"> English User Dictionary </string>
    <string name="preference_dictionary_menu_zhcn"> Chinese User Dictionary </string>
    <string name="preference_user_dictionary">User Dictionary</string>
    <string name="preference_user_dictionary_edit_words_title">User Dictionary</string>
    <string name="preference_user_dictionary_edit_words_summary">List/add/edit/delete words in user dictionary.</string>
    <string name="preference_user_dictionary_edit_words_summary_ja">List/add/edit/delete words in Japanese user dictionary.</string>
    <string name="preference_user_dictionary_edit_words_summary_en">List/add/edit/delete words in English user dictionary.</string>
    <string name="preference_user_dictionary_edit_words_summary_zhcn">List/add/edit/delete words in Chinese user dictionary.</string>
    <string name="preference_user_dictionary_clear_learning_title">Clear Learning Dictionary</string>
    <string name="preference_user_dictionary_clear_learning_summary">Remove all words from learning dictionary.</string>
    <string name="preference_user_dictionary_clear_user_title">Clear User Dictionary</string>
    <string name="preference_user_dictionary_clear_user_summary">Remove all words from user dictionary.</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_close">Close</string>
    <string name="dialog_clear_user_dictionary_message">Clear user dictionary?</string>
    <string name="dialog_clear_learning_dictionary_message">Clear learning dictionary?</string>
    <string name="dialog_clear_user_dictionary_done">Cleared.</string>
    <string name="dialog_clear_learning_dictionary_done">Cleared.</string>
    <string name="user_dictionary_list_words">Registered words</string>
    <string name="user_dictionary_list_words_en">Registered words in English User Dic</string>
    <string name="user_dictionary_list_words_ja">Registered words in Japanese User Dic</string>
    <string name="user_dictionary_list_words_zhcn">Registered words in Chinese User Dic</string>
    <string name="user_dictionary_edit_words">Edit</string>
    <string name="user_dictionary_title_read">Reading</string>
    <string name="user_dictionary_title_candidate">Word</string>
    <string name="user_dictionary_add">Add</string>
    <string name="user_dictionary_edit">Edit</string>
    <string name="user_dictionary_delete">Delete</string>
    <string name="user_dictionary_delete_confirm">Delete the selected word?</string>
    <string name="user_dictionary_delete_complete">Deleted.</string>
    <string name="user_dictionary_delete_fail">Fail to delete it</string>
    <string name="user_dictionary_words_duplication_message">Already registered.</string>
    <string name="user_dictionary_over_max_text_size_message">Length of the string exceeds the limit.</string>
    <string name="user_dictionary_creating_wordlist">Loading</string>
    <string name="user_dictionary_init">Initialize?</string>
    <string name="user_dictionary_prev_button">　≪　</string>
    <string name="user_dictionary_next_button">　≫　</string>
    <string name="openwnn_english_copyright">Ver.1.3.5\nOMRON SOFTWARE Co., Ltd.</string>
    <string name="openwnn_english">OpenWnn English</string>
    <string name="openwnn_english_system_dictionary">/data/data/me.blog.hgl1002.openwnn/lib/libWnnEngDic.so</string>
    <string name="openwnn_english_writable_dictionary">/data/data/me.blog.hgl1002.openwnn/writableEN.dic</string>
    <string name="en_word_separators">.,;:!?</string>
    <string name="openwnn_japanese_copyright">Ver.1.3.5\nOMRON SOFTWARE Co., Ltd.</string>
    <string name="openwnn_japanese">Japanese IME</string>
    <string name="openwnn_japanese_system_dictionary">/data/data/me.blog.hgl1002.openwnn/lib/libWnnJpnDic.so</string>
    <string name="openwnn_japanese_writable_dictionary">/data/data/me.blog.hgl1002.openwnn/writableJAJP.dic</string>
    <string name="openwnn_china_copyright">Ver.1.3.5\nOMRON SOFTWARE Co., Ltd.</string>
    <string name="openwnn_china">OpenWnn Chinese</string>
    <string name="openwnn_china_system_dictionary">/data/data/me.blog.hgl1002.openwnn/lib/libWnnZHCNDic.so</string>
    <string name="openwnn_korean_copyright">Ver.1.3.5\nhgl1002@naver.com</string>
    <string name="openwnn_korean">OpenWnn Korean</string>
    <string name="openwnn_china_writable_dictionary">/data/data/me.blog.hgl1002.openwnn/writableZHCN.dic</string>
    <string name="cn_word_separators">.,;:!?</string>
      <string name="button_candidate_select">Select</string>
      <string name="button_candidate_delete">Delete learning?</string>
      <string name="button_candidate_cancel">Close</string>
    <string name="key_left_arrow">↤</string>
    <string name="key_right_arrow">↦</string>
    <string name="key_space">スペース</string>
    <string name="key_space_conv">スペース/変換</string>
    <string name="key_change_mode">文字</string>
    <string name="key_convert">変換</string>
    <string name="key_switch_keyboard">KBD</string>
    <string name="key_12key_A">゛゜ 大小</string>
    <string name="key_12key_kutoten">、。</string>
    <string name="key_12key_eisuu_kana">英数カナ</string>
    <string name="key_12key_alphabet_1">.＠ １</string>
    <string name="key_12key_alphabet_2">ABC ２</string>
    <string name="key_12key_alphabet_3">DEF ３</string>
    <string name="key_12key_alphabet_4">GHI ４</string>
    <string name="key_12key_alphabet_5">JKL ５</string>
    <string name="key_12key_alphabet_6">MNO ６</string>
    <string name="key_12key_alphabet_7">PQRS ７</string>
    <string name="key_12key_alphabet_8">TUV ８</string>
    <string name="key_12key_alphabet_9">WXYZ ９</string>
    <string name="key_12key_alphabet_0">- ０</string>
    <string name="key_12key_alphabet_A">A/a</string>
    <string name="key_12key_katakana_1">ア</string>
    <string name="key_12key_katakana_2">カ</string>
    <string name="key_12key_katakana_3">サ</string>
    <string name="key_12key_katakana_4">タ</string>
    <string name="key_12key_katakana_5">ナ</string>
    <string name="key_12key_katakana_6">ハ</string>
    <string name="key_12key_katakana_7">マ</string>
    <string name="key_12key_katakana_8">ヤ</string>
    <string name="key_12key_katakana_9">ラ</string>
    <string name="key_12key_katakana_0">ワ</string>
    <string name="key_12key_1">あ 1.＠</string>
    <string name="key_12key_2">か 2 ABC</string>
    <string name="key_12key_3">さ 3 DEF</string>
    <string name="key_12key_4">た 4 GHI</string>
    <string name="key_12key_5">な 5 JKL</string>
    <string name="key_12key_6">は 6 MNO</string>
    <string name="key_12key_7">ま 7 PQRS</string>
    <string name="preference_keyboard_long_press_timeout_title">Long-press timeout (ms)</string>
    <string name="preference_keyboard_long_press_timeout_summary">Set the timeout of long-press.</string>
    <string name="preference_keyboard_use_12key_title">Use 12-Key layout</string>
    <string name="preference_keyboard_use_12key_summary">Use 12-Key based keyboard layout instead of QWERTY-based one.</string>
    <string name="preference_keyboard_hangul_12key_title">12-Key Hangul keyboard type</string>
    <string name="preference_keyboard_hangul_12key_summary">Type of 12-key Hangul keyboard.</string>
    <string name="preference_keyboard_hangul_title">Hangul keyboard type</string>
    <string name="preference_keyboard_hangul_summary">Type of Hangul keyboard.</string>
    <string name="preference_keyboard_alphabet_use_qwerty_title">Always use Qwerty-based layout for Alphabet</string>
    <string name="preference_keyboard_alphabet_use_qwerty_summary">Use qwerty based Alphabet layout while using 12-key as Hangul.</string>
    <string name="preference_keyboard_alphabet_title">Alphabet keyboard type</string>
    <string name="preference_keyboard_alphabet_summary">Type of Alphabet keyboard.</string>
    <string name="preference_keyboard_use_flick_title">Use Flick</string>
    <string name="preference_keyboard_use_flick_summary">Use flick (slide) function for keyboard.</string>
    <string name="preference_keyboard_flick_sensitivity_title">Flick Sensitivity</string>
    <string name="preference_keyboard_flick_sensitivity_summary">Adjust flick sensitivity. Default value is 100.</string>
    <string name="preference_hardware_setting_menu">Hardware Keyboard</string>
    <string name="preference_hardware_hangul_title">Hardware Hangul keyboard type</string>
    <string name="preference_hardware_hangul_summary">Type of Hangul keyboard while using hardware keyboard.</string>
    <string name="preference_hardware_alphabet_title">Hardware Alphabet keyboard type</string>
    <string name="preference_hardware_alphabet_summary">Type of Alphabet keyboard while using hardware keyboard.</string>
</resources>